--- a/QuestBoard/Views/Project/List.cshtml
+++ b/QuestBoard/Views/Project/List.cshtml
@@ -53,7 +53,14 @@
    }
    else
    {
-       <p>no projects found</p>
+       <p>no current projects</p>
+
+        <a class="btn me-3 mt-3 bg-success text-light "
+           asp-area=""
+           asp-controller="Project"
+           asp-action="Add">
+            Create new Project
+        </a>
    }
     
     
