--- a/QuestBoard/Views/Account/ProfilSettings.cshtml
+++ b/QuestBoard/Views/Account/ProfilSettings.cshtml
@@ -57,11 +57,11 @@
 
         <div class="border border-danger rounded mt-5">
             <h5 class="text-bg-danger mb-3">Danger Zone</h5>
-            <p> To delete your Account type "delete" and press the button </p>
-            <form method="post">
+            <p> To delete your Account type "DELETE" and press the button </p>
+            <form action="/Account/DeleteAccount" method="post">
                   <div class="d-flex">
-                        <button class="btn btn-danger me-3">Delete</button>
-                        <input class="form-control bg-dark" type="text" name="name" placeholder="Type DELETE" value="" />
+                        <button class="btn btn-danger me-3" type="submit">Delete</button>
+                        <input class="form-control bg-dark text-light" type="text"  placeholder="Type DELETE" value="" asp-for="deleteConfirmation" />
                   </div>
             </form>
             
