--- a/QuestBoard/Views/ProjectForum/List.cshtml
+++ b/QuestBoard/Views/ProjectForum/List.cshtml
@@ -10,7 +10,7 @@
     <div class="py-2 mb-2 siteHeader d-flex" >
     
         <div class="container">
-            <h2>Forum</h2>
+            <h2>@Model.Project.Name / Forum</h2>
         </div>
 
         <div>
