--- a/QuestBoard/Views/Documents/List.cshtml
+++ b/QuestBoard/Views/Documents/List.cshtml
@@ -10,7 +10,7 @@
 
     <div class="py-2 mb-2 siteHeader d-flex" >
        <div class="container">
-           <h2>@Model.Project.Name -> Documents</h2>
+           <h2>@Model.Project.Name / Documents</h2>
         </div>
 
     <div>
