added: tinymce api key + improved ui

--- a/QuestBoard/Views/Project/Edit.cshtml
+++ b/QuestBoard/Views/Project/Edit.cshtml
@@ -67,9 +67,9 @@
                     </div>
                 </div>
 
-                <div id="showDescriptionSection" style="display:block;" >
-                    <h2 class="form-label">Description</h2>
-                    <div class="text-light mb-3"  >@Model.Description </div>   
+                <div  id="showDescriptionSection" style="display:block;" >
+                   <!-- <h2 class="form-label">Description</h2>-->
+                    <div class="text-light mb-3"  >@Html.Raw( Model.Description) </div>   
                 </div>
                 <a class="text-success" onclick="showEditSection('editSection', 'showDescriptionSection')">Edit</a>
         </div>
