--- a/QuestBoard/Views/AdminTag/ListTag.cshtml
+++ b/QuestBoard/Views/AdminTag/ListTag.cshtml
@@ -14,7 +14,7 @@
 <div class="container">
     @if(Model != null && Model.Any())
     {
-        <table class="table table-dark">
+        <table class="styled-table">
             <thead>
                 <tr>
                     <th>Id</th>
