--- a/QuestBoard/Views/Shared/_Layout.cshtml
+++ b/QuestBoard/Views/Shared/_Layout.cshtml
@@ -32,9 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
+                      <!--  <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        </li>-->
 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -63,7 +63,7 @@
                                 <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="ProfilSettings">Settings</a>
                             </li>
                         }
-
+                        <!--
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Tasks
@@ -87,7 +87,7 @@
                                     asp-action="Calender">Calender</a>
                                 </li>
                             </ul>
-                        </li>
+                        </li>-->
                         @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin"))
                         {
                             <li class="nav-item dropdown">
