added: HtmlSanitizer to Project Description

--- a/QuestBoard/Views/Project/List.cshtml
+++ b/QuestBoard/Views/Project/List.cshtml
@@ -37,8 +37,8 @@
                             </a>
                            </td>
                        <td>@project.shortDescription</td>
-                        <td>@DateTime.Now</td>
-                        <td>Creator</td>
+                        <td>@project.creationTime</td>
+                        <td>@project.creator</td>
                    </tr>
                }
            </tbody>
