--- a/QuestBoard/Views/Quest/Add.cshtml
+++ b/QuestBoard/Views/Quest/Add.cshtml
@@ -35,7 +35,8 @@
             </div>
             <div class="mb-3">
                 <label class="form-label">Description</label>
-                <input type="text" class="form-control bg-dark text-light" id="description" asp-for="Description" />
+                
+                <textarea type="text" class="form-control bg-dark text-light" id="description" asp-for="Description"></textarea>
             </div>
             <div class="mb-3">
                 <label class="form-label">Deadline</label>
