--- a/QuestBoard/Views/Quest/Edit.cshtml
+++ b/QuestBoard/Views/Quest/Edit.cshtml
@@ -42,7 +42,7 @@
 
                 <div class="mb-3">
                     <label class="form-label">Description</label>
-                    <input type="text" class="form-control bg-dark text-light" id="description" asp-for="Description" />
+                    <textarea type="text" class="form-control bg-dark text-light" id="description" asp-for="Description" ></textarea>
                 </div>
             </div>
             <div class="statusPageSidebar">
