--- a/QuestBoard/Views/Home/Index.cshtml
+++ b/QuestBoard/Views/Home/Index.cshtml
@@ -66,5 +66,7 @@
         <p> ✅ Bessere Planung – Erkenne Engpässe frühzeitig und optimiere den Workflow.</p>
         <p>Mit dem Progress Tracker behältst du jederzeit die Kontrolle über dein Projekt! </p>
     </div>
+    <div></div>
+    <div></div>
     
 </div>
