improved UI Forum Thread

--- a/QuestBoard/Views/ProjectForum/ShowThread.cshtml
+++ b/QuestBoard/Views/ProjectForum/ShowThread.cshtml
@@ -9,7 +9,7 @@
 {
     <div class="py-2 mb-2 siteHeader d-flex">
         <div class="container">
-            <h2>@Model[0].ThreadName</h2>
+            <h2>Projekt Questboard / Forum / Thread</h2>
         </div>
 
         <div>
