--- a/QuestBoard/Views/Quest/Edit.cshtml
+++ b/QuestBoard/Views/Quest/Edit.cshtml
@@ -4,6 +4,23 @@
 *@
 @{
 }
+
+@if(TempData["SuccessMessage"] != null)
+{
+    <div id="successMsg" class="alert alert-success alert-dismissible fade show">
+        @TempData["SuccessMessage"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+    </div>
+}
+
+@if (TempData["ErrorMessage"] != null)
+{
+    <div id="successMsg" class="alert alert-danger alert-dismissible fade show">
+        @TempData["ErrorMessage"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+    </div>
+}
+
 <form method="post">
      @if(Model != null)
     {
@@ -38,11 +55,13 @@
                 <div class="mb-3">
                     <label class="form-label">Name</label>
                     <input type="text" class="form-control bg-dark text-light" id="name" asp-for="Name"  />
+                    <span class="text-danger" asp-validation-for="Name"></span>
                 </div>
 
                 <div class="mb-3">
                     <label class="form-label">Description</label>
-                    <textarea type="text" class="form-control bg-dark text-light" id="description" asp-for="Description" ></textarea>
+                    <textarea type="text" class="form-control bg-dark text-light" id="description" asp-for="Description"  ></textarea>
+                        <span class="text-danger" asp-validation-for="Description"></span>
                 </div>
             </div>
             <div class="statusPageSidebar">
