--- a/QuestBoard/Views/AdminTag/AddTag.cshtml
+++ b/QuestBoard/Views/AdminTag/AddTag.cshtml
@@ -16,11 +16,13 @@
     <form method="post">
         <div class="mb-3 mt-3">
             <label class="form-label">Name</label>
-            <input type="text" class="form-control  bg-dark text-light" id="name" asp-for="Name"/>
+            <input type="text" class="form-control  bg-dark text-light" id="name" asp-for="Name" />
+            <span class="text-danger" asp-validation-for="Name"></span>
         </div>
         <div class="mb-3">
             <label class="form-label">DisplayName</label>
             <input type="text" class="form-control bg-dark text-light" id="displayName" asp-for="DisplayName" />
+            <span class="text-danger" asp-validation-for="DisplayName"></span>
         </div>
        
         <div class="mb-3">
