--- a/QuestBoard/Views/Quest/Add.cshtml
+++ b/QuestBoard/Views/Quest/Add.cshtml
@@ -31,12 +31,14 @@
             <div class="mb-3 mt-3">
                 <label class="form-label">Task Name</label>
                 <input type="text" class="form-control  bg-dark text-light" id="name" asp-for="Name" />
+                <span class="text-danger" asp-validation-for="Name"></span>
                 <input type="hidden" class="form-control  bg-dark text-light" id="projectId" asp-for="projectId" />
             </div>
             <div class="mb-3">
                 <label class="form-label">Description</label>
                 
                 <textarea type="text" class="form-control bg-dark text-light" id="description" asp-for="Description"></textarea>
+                <span class="text-danger" asp-validation-for="Description"></span>
             </div>
             <div class="mb-3">
                 <label class="form-label">Deadline</label>
