--- a/QuestBoard/Views/ProjectForum/ShowThread.cshtml
+++ b/QuestBoard/Views/ProjectForum/ShowThread.cshtml
@@ -33,7 +33,7 @@
                     <h2>@Model[0].ThreadName</h2>
 
 
-                    <p class="text-secondary">Started by @Model[0].User.Name on </p>
+                    <p class="text-secondary">Started by @Model[0].User.Name on @Model[0].created </p>
 
 
                     <p>@Model[0].message</p>
