--- a/QuestBoard/Views/Account/Register.cshtml
+++ b/QuestBoard/Views/Account/Register.cshtml
@@ -27,7 +27,10 @@
 
                 <div class="mb-3">
                     <label class="form-label">Password</label>
-                    <input type="password" id="password" class="form-control"asp-for="Password" required minlength="6"/>
+                    <input type="password" id="password" class="form-control" asp-for="Password"
+                           required minlength="6" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}"
+                           title="Das Passwort muss mindestens 6 Zeichen lang sein und eine Zahl, einen Groß- und Kleinbuchstaben sowie ein Sonderzeichen enthalten." />
+
                     <span class="text-danger" asp-validation-for="Password"></span>
                 </div>
 
