--- a/QuestBoard/Views/Shared/_Layout.cshtml
+++ b/QuestBoard/Views/Shared/_Layout.cshtml
@@ -107,6 +107,14 @@
                                         asp-controller="AdminTag"
                                         asp-action="ListTag">Show Tag</a>
                                     </li>
+                                    <li>
+                                        <a class="dropdown-item text-light"
+                                            asp-area=""
+                                            asp-controller="AdminUsers"
+                                            asp-action="List">
+                                            Users
+                                        </a>
+                                    </li>
 
                                 </ul>
                             </li>
