--- a/QuestBoard/Views/Project/Edit.cshtml
+++ b/QuestBoard/Views/Project/Edit.cshtml
@@ -5,7 +5,8 @@
 
 *@
 @{
-
+    int nextPage = Convert.ToInt32(ViewBag.PageNumber) + 1;
+    int prevPage = Convert.ToInt32(ViewBag.PageNumber) - 1;
 }
 
 @if (TempData["SuccessMessage"] != null)
@@ -231,14 +232,95 @@
                 </tbody>
 
             </table>
+            <div class="d-flex justify-content-between">
+                    <a class="btn me-3 mt-3 mb-3 bg-success text-light @(!Model.isAdmin ? "admin-disabled" : "")"
+                       asp-area=""
+                       asp-route-projectId="@Model.Id"
+                       asp-controller="Quest"
+                       asp-action="Add">
+                        Add new Task
+                    </a>
 
-            <a class="btn me-3 mt-3 bg-success text-light @(!Model.isAdmin ? "admin-disabled" : "")"
-               asp-area=""
-               asp-route-projectId="@Model.Id"
-               asp-controller="Quest"
-               asp-action="Add">
-                Add new Task
-            </a>
+                    <div class="mt-4">
+                        <a class="me-3 custom-link"
+                           asp-controller="Project"
+                           asp-action="Edit"
+                           asp-route-pageSize="5">
+                            Show 5 Entries
+                        </a>
+                        <a class="me-3  custom-link"
+                           asp-controller="Project"
+                           asp-action="Edit"
+                           asp-route-pageSize="10">
+                            Show 10 Entries
+                        </a>
+                        <a class="me-3  custom-link"
+                           asp-controller="Project"
+                           asp-action="Edit"
+                           asp-route-pageSize="50">
+                            Show 50 Entries
+                        </a>
+                    </div>
+                    
+                    
+                        
+                    
+                    
+            </div>
+                <nav class="mt-5 d-flex align-items-end flex-column mb-3" aria-label="Page navigation example">
+                    <ul class="pagination ">
+                        <li class="page-item">
+                            <a class="page-link bg-black"
+                               id="previous"
+                               asp-controller="Project"
+                               asp-action="Edit"
+                               asp-route-pageNumber="@prevPage"
+                               asp-route-pageSize="@ViewBag.PageSize">
+                                Previous
+                            </a>
+                        </li>
+
+                        @for (int i = 1; i <= ViewBag.TotalPage; i++)
+                        {
+                            <li class="page-item">
+                                @if(ViewBag.PageNumber == @i)
+                                {
+                                    <a class="page-link bg-dark text-light"
+                                       id="@i"
+                                       asp-controller="Project"
+                                       asp-action="Edit"
+                                       asp-route-pageNumber="@i"
+                                       asp-route-pageSize="@ViewBag.PageSize">
+                                        @i
+                                    </a>
+                                }else
+                                {
+                                    <a class="page-link bg-dark"
+                                       id="@i"
+                                       asp-controller="Project"
+                                       asp-action="Edit"
+                                       asp-route-pageNumber="@i"
+                                       asp-route-pageSize="@ViewBag.PageSize">
+                                        @i
+                                    </a>
+                                }
+                                
+                            </li>
+                        }
+
+                        <li class="page-item">
+                            <a class="page-link bg-black"
+                               id="next"
+                               asp-controller="Project"
+                               asp-action="Edit"
+                               asp-route-pageNumber="@nextPage"
+                               asp-route-pageSize="@ViewBag.PageSize">
+                                Next
+                            </a>
+                        </li>
+
+                    </ul>
+                </nav>
 
         </div>
                 
@@ -268,5 +350,7 @@
             y = document.getElementById(m);
             y.style.display = (y.style.display === 'none') ? 'block': 'none'; 
         }
+
+        
     </script>
 }
